Use non virtual threads on inbound servers